[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP Related stuff
axum = { version = "0.6.18", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = {version = "0.4.0", features = ["cors", "trace"]}

# ASYNC Related stuff
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
